--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(vk
 	"sources/window/glfw_window.cpp"
 
 	"sources/renderer/types.hpp"
+	"sources/renderer/types.cpp"
 	"sources/renderer/renderer.hpp"
 	"sources/renderer/renderer.cpp"
 	"sources/renderer/swapchain.hpp"
