--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(vk
 	"sources/renderer/renderer.cpp"
 	"sources/renderer/swapchain.hpp"
 	"sources/renderer/swapchain.cpp"
+	"sources/renderer/context.hpp"
+	"sources/renderer/context.cpp"
 )
 
 set_property(TARGET vk PROPERTY CXX_STANDARD 23)
