--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,12 @@ add_executable(vk
 	"sources/renderer/types.cpp"
 	"sources/renderer/renderer.hpp"
 	"sources/renderer/renderer.cpp"
-	"sources/renderer/swapchain.hpp"
-	"sources/renderer/swapchain.cpp"
 	"sources/renderer/context.hpp"
 	"sources/renderer/context.cpp"
+	"sources/renderer/device.hpp"
+	"sources/renderer/device.cpp"
+	"sources/renderer/swapchain.hpp"
+	"sources/renderer/swapchain.cpp"
 )
 
 set_property(TARGET vk PROPERTY CXX_STANDARD 23)
