--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(Vulkan REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(Stb REQUIRED)
+find_package(tinyobjloader CONFIG REQUIRED)
 
 add_executable(vk 
 	"sources/main.cpp"
@@ -44,4 +45,5 @@ target_link_libraries(vk PRIVATE
 	glfw
 	Vulkan::Vulkan
 	glm::glm-header-only
+	tinyobjloader::tinyobjloader
 )
